fix(styles): set only dark config for auto dark mode browsers

--- a/packages/styles/src/_base.scss
+++ b/packages/styles/src/_base.scss
@@ -10,7 +10,7 @@
 html,
 body {
   position: relative;
-  color-scheme: dark;
+  color-scheme: dark only;
 }
 
 body::before {
